--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@a2ui/lit": "^0.8.1",
+    "@lit/task": "^1.0.3",
     "@spectrum-web-components/action-button": "^1.10.0",
     "@spectrum-web-components/action-group": "^1.10.0",
     "@spectrum-web-components/button": "^1.10.0",
