--- a/agent-java/src/main/resources/application.properties
+++ b/agent-java/src/main/resources/application.properties
@@ -45,6 +45,13 @@ aem.agent.llm.anthropic.model=${ANTHROPIC_MODEL:claude-3-haiku-20240307}
 aem.agent.llm.ollama.base-url=${OLLAMA_BASE_URL:http://host.docker.internal:11434}
 aem.agent.llm.ollama.model=${OLLAMA_MODEL:llama3.2}
 
+# LLM Timeouts (in milliseconds)
+aem.agent.llm.timeout.connect=5000
+aem.agent.llm.timeout.read=60000
+
+# Performance: Number of suggestions to generate (default 1 for fast response)
+aem.agent.suggestions.count=${SUGGESTIONS_COUNT:1}
+
 # ========================================
 # Security Configuration
 # ========================================
